--- a/BlazorCommon.RazorLib/BlazorCommon.RazorLib.csproj
+++ b/BlazorCommon.RazorLib/BlazorCommon.RazorLib.csproj
@@ -16,6 +16,7 @@
         <PackageReference Condition="'$(TargetFramework)' == 'net6.0'" Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0" />
         <PackageReference Condition="'$(TargetFramework)' == 'net5.0'" Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0" />
         <PackageReference Condition="'$(TargetFramework)' != 'net7.0' AND '$(TargetFramework)' != 'net6.0' AND '$(TargetFramework)' != 'net5.0'" Include="Microsoft.AspNetCore.Components.Web" Version="3.1.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     </ItemGroup>
     
     <ItemGroup>
@@ -33,6 +34,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <AdditionalFiles Include="BackgroundTaskCase\BackgroundTaskDisplay.razor" />
       <AdditionalFiles Include="WatchWindow\WatchWindowExample\LabeledCounter.razor" />
       <AdditionalFiles Include="WatchWindow\WatchWindowExample\TextEditorDebugContextMenuDisplay.razor" />
       <AdditionalFiles Include="WatchWindow\WatchWindowExample\TextEditorDebugDisplay.razor" />
